WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
141241
JSC's Type Profiler doesn't profile the type of the looping variable in ForOf/ForIn loops
https://bugs.webkit.org/show_bug.cgi?id=141241
Summary
JSC's Type Profiler doesn't profile the type of the looping variable in ForOf...
Saam Barati
Reported
2015-02-04 01:45:41 PST
This should be a simple fix, I must've overlooked generating code for this AST node earlier.
Attachments
patch
(7.93 KB, patch)
2015-02-09 14:23 PST
,
Saam Barati
fpizlo
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Saam Barati
Comment 1
2015-02-09 14:23:04 PST
Created
attachment 246289
[details]
patch
Saam Barati
Comment 2
2015-02-09 17:00:02 PST
Comment on
attachment 246289
[details]
patch View in context:
https://bugs.webkit.org/attachment.cgi?id=246289&action=review
> Source/JavaScriptCore/tests/typeProfiler/loop.js:14 > +//var arg2;
removed locally.
Saam Barati
Comment 3
2015-02-09 23:41:27 PST
landed in:
http://trac.webkit.org/changeset/179865
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug